@@ -9,6 +9,7 @@ Version 1.0.2
 * Treat warnings as errors; use --force to override
 * Fix some compiler warnings
 * Add deltaClock and deltaClockRate
+* Further fix to generated flags when an antenna is not in a job
 * This is the version for DiFX-1.5.2
 
 Version 1.0.1
